--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
-DB_HOST=localhost
+DB_CONNECTION=mysql
+DB_HOST=192.168.10.10
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
